# Bernal-Fowler_Counter

./: CMakeLists.txt  README.md  tmp.txt
src/graphlib/: CMakeLists.txt  graph.cpp  graph.h
src/invariantlib/: CMakeLists.txt  invariant.cpp  invariant.h
src/main/: CMakeLists.txt  main.cpp
src/permutationlib/: CMakeLists.txt  permutation.cpp  permutation.h
src/test/: CMakeLists.txt  graph_test.cpp  invariant_test.cpp  main.cpp  perm_test.cpp
